# SenseVoiceOnnx

./: CMakeLists.txt  README.md  asr.cpp  asr.h  build.sh  main.cc  sense_voice.cpp  util.h  vad.h
cmake/: kaldi-native-fbank.cmake  onnxruntime-linux-x86_64-static.cmake
